--- a/Kurzusok/Kurzusok/Views/Home/_CourseModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_CourseModalPartial.cshtml
@@ -37,6 +37,7 @@
                             @if (training == "Nappali")
                             {
                                 <option value="Gyakorlat">Gyakorlat</option>
+                                <option value="Labor">Labor</option>
                             }
                             <option value="Csak Vizsga">Csak Vizsga</option>
                             <option value="Egyéni felkészülés">Egyéni felkészülés</option>
@@ -77,6 +78,9 @@
                         <span asp-validation-for="Comment" class="text-danger"></span>
                     </div>
                     <div class="teacherSelect">
+                        <div id="errorLoad" class="collapse">
+                            <span class="text-danger" id="errorLoadmessage"></span>
+                        </div>
                         <div class="row form-group copyThisDiv">
                             <div class="col-6">
                                 <label>Oktató</label>
@@ -91,7 +95,7 @@
                                 </select>
                             </div>
                             <div class="col-6">
-                                <label>Terhelés</label>
+                                <label>Terhelés (%)</label>
                                 <input type="number" name="LoadList" min="1" max="100" class="form-control" required />
                             </div>
                         </div>
